fix/overflow: 'hidden' problem

--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,3 @@ grid-row-gap: 0px;
 
 
 
-body {
-  overflow: hidden;
-}
